[FEAT] room 한 개에 대한 정보 제공 API
room 한 개에 대한 정보 제공 API
