# src/controllers/roomController.ts
@@ -1,5 +1,6 @@
 import { Request, Response } from 'express';
 import StatusCode from '../@types/statusCode';
+import { logger } from '../config/logger';
 import roomService from '../services/roomService';
 
 const createRoom = async (req: Request, res: Response) => {
@@ -62,10 +63,22 @@ const enterRoomByInvitation = async (req: Request, res: Response) => {
   }
 };
 
+const getRoomById = async (req: Request, res: Response) => {
+  try {
+    const { roomId } = req.params;
+    const room = await roomService.getRoomById(+roomId);
+    return res.status(StatusCode.OK).json(room);
+  } catch (err) {
+    logger.error(err);
+    return res.status(StatusCode.SERVER_ERROR).json('Internal Server Error');
+  }
+};
+
 const roomController = {
   createRoom,
   getMyRoomList,
   enterRoomByInvitation,
+  getRoomById,
 };
 
 export default roomController;
